--- a/docker-compose.blue.yml
+++ b/docker-compose.blue.yml
@@ -40,6 +40,36 @@ services:
       retries: 3
       start_period: 60s
 
+  frontend:
+    build:
+      context: ./services/frontend
+      dockerfile: Dockerfile
+      args:
+        - NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL:-http://catalog-microservice:3200/api}
+        - NEXT_PUBLIC_AUTH_SERVICE_URL=${NEXT_PUBLIC_AUTH_SERVICE_URL:-https://auth.statex.cz}
+    container_name: catalog-frontend-blue
+    ports:
+      - "${FRONTEND_PORT:-3201}:3000"
+    env_file:
+      - .env
+    environment:
+      - NODE_ENV=${NODE_ENV:-production}
+      - API_URL=http://catalog-microservice:3200/api
+      - NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL:-https://catalog.statex.cz/api}
+      - AUTH_SERVICE_URL=${AUTH_SERVICE_URL}
+      - NEXT_PUBLIC_AUTH_SERVICE_URL=${NEXT_PUBLIC_AUTH_SERVICE_URL:-https://auth.statex.cz}
+    networks:
+      - nginx-network
+    restart: unless-stopped
+    depends_on:
+      - catalog
+    healthcheck:
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://127.0.0.1:3000/"]
+      interval: 10s
+      timeout: 10s
+      retries: 2
+      start_period: 10s
+
 networks:
   nginx-network:
     external: true
