--- a/docker-compose.green.yml
+++ b/docker-compose.green.yml
@@ -5,7 +5,7 @@ services:
       dockerfile: Dockerfile
     container_name: catalog-microservice-green
     ports:
-      - "${PORT:-3200}:${PORT:-3200}"
+      - "${PORT_GREEN:-3202}:${PORT:-3200}"
     env_file:
       - .env
     environment:
@@ -39,6 +39,36 @@ services:
       timeout: 10s
       retries: 3
       start_period: 60s
+
+  frontend:
+    build:
+      context: ./services/frontend
+      dockerfile: Dockerfile
+      args:
+        - NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL:-http://catalog-microservice:3200/api}
+        - NEXT_PUBLIC_AUTH_SERVICE_URL=${NEXT_PUBLIC_AUTH_SERVICE_URL:-https://auth.statex.cz}
+    container_name: catalog-frontend-green
+    ports:
+      - "${FRONTEND_PORT_GREEN:-3203}:3000"
+    env_file:
+      - .env
+    environment:
+      - NODE_ENV=${NODE_ENV:-production}
+      - API_URL=http://catalog-microservice:3200/api
+      - NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL:-https://catalog.statex.cz/api}
+      - AUTH_SERVICE_URL=${AUTH_SERVICE_URL}
+      - NEXT_PUBLIC_AUTH_SERVICE_URL=${NEXT_PUBLIC_AUTH_SERVICE_URL:-https://auth.statex.cz}
+    networks:
+      - nginx-network
+    restart: unless-stopped
+    depends_on:
+      - catalog
+    healthcheck:
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://127.0.0.1:3000/"]
+      interval: 10s
+      timeout: 10s
+      retries: 2
+      start_period: 10s
 
 networks:
   nginx-network:
