--- a/docker-compose.green.yml
+++ b/docker-compose.green.yml
@@ -54,6 +54,7 @@ services:
       - .env
     environment:
       - NODE_ENV=${NODE_ENV:-production}
+      - PORT=3000
       - API_URL=http://catalog-microservice:3200/api
       - NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL:-https://catalog.statex.cz/api}
       - AUTH_SERVICE_URL=${AUTH_SERVICE_URL}
