--- a/docker-compose.green.yml
+++ b/docker-compose.green.yml
@@ -34,7 +34,7 @@ services:
         reservations:
           memory: 128M
     healthcheck:
-      test: ["CMD", "node", "-e", "require('http').get('http://localhost:${PORT:-3200}/health', (r) => {process.exit(r.statusCode === 200 ? 0 : 1)})"]
+      test: ["CMD", "node", "-e", "require('http').get('http://localhost:${PORT:-3200}/api/health', (r) => {process.exit(r.statusCode === 200 ? 0 : 1)})"]
       interval: 30s
       timeout: 10s
       retries: 3
