Add API Gateway service to Docker Compose configurations and create NGINX configuration file
- Introduced `api-gateway` service in both `docker-compose.blue.yml` and `docker-compose.green.yml` with health checks and dependencies on the catalog service.
- Added `nginx-api-gateway.conf` for routing requests to the catalog microservices and handling health checks.
- Updated README to reflect changes in setup instructions.

--- a/docker-compose.green.yml
+++ b/docker-compose.green.yml
@@ -41,6 +41,25 @@ services:
       retries: 3
       start_period: 60s
 
+  api-gateway:
+    image: nginx:alpine
+    container_name: catalog-microservice-api-gateway-green
+    ports:
+      - "${API_GATEWAY_PORT_GREEN:-3205}:80"
+    volumes:
+      - ./nginx-api-gateway.conf:/etc/nginx/nginx.conf:ro
+    networks:
+      - nginx-network
+    restart: unless-stopped
+    depends_on:
+      - catalog
+    healthcheck:
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://127.0.0.1:80/health"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
+      start_period: 10s
+
   frontend:
     build:
       context: ./services/frontend
