Enhance NGINX configuration and update AuthService HTTP requests
- Added a zone definition for the catalog API in the NGINX configuration to improve request handling.
- Updated AuthService to include JSON content type headers and a timeout for login and register requests to the auth microservice.

--- a/nginx-api-gateway.conf
+++ b/nginx-api-gateway.conf
@@ -7,6 +7,7 @@ http {
     resolver 127.0.0.11 valid=30s;
 
     upstream catalog-api {
+        zone catalog-api_zone 64k;
         # Use service name - Docker will resolve to the correct container
         server catalog-microservice-blue:3200 resolve;
         server catalog-microservice-green:3200 backup resolve;
